BUG#14358: in mysql.cc, don't neglect to strip delimiter off lines < 9 characters long.